[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Maps/Images/Custom/Pomaland-BG2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Maps/Images/Custom/Controls.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/PressStart2P.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Src/Options.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=3]
Button/styles/focus = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 480.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 240, 135 )

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
margin_right = 480.0
margin_bottom = 270.0
texture = ExtResource( 2 )

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
rect_pivot_offset = Vector2( -19, -137 )

[node name="BackBtn" type="Button" parent="CenterContainer2"]
margin_top = 11.0
margin_right = 60.0
margin_bottom = 29.0
focus_neighbour_top = NodePath("../Quit")
theme = SubResource( 3 )
custom_colors/font_color_focus = Color( 0.839216, 0.905882, 0.286275, 1 )
custom_colors/font_color_hover = Color( 0.839216, 0.905882, 0.286275, 1 )
custom_fonts/font = SubResource( 4 )
text = "Back"
flat = true

[connection signal="pressed" from="CenterContainer2/BackBtn" to="." method="_on_BackBtn_pressed"]
